--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="img"></div>
   <div class="center">
     <div class="title">My First Website!</div>
-    <div class="sub_title">Learn more about Agni</div>
+    <div class="sub_title">Learn more about Juli</div>
     <div class="btns">
       <button>Subscribe</button>
     </div>
